[project]
name = "datatalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.69.0",
    "groq>=1.1.2",
    "pandas>=2.3.3",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
    "xai-sdk>=1.11.0",
]
